--- a/style.css
+++ b/style.css
@@ -6,9 +6,48 @@ html, body {
 *, *:before, *:after {
     box-sizing: inherit;
 }
+
+body
+{
+  background-image: url('images/bg.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  font-family: "Roboto",sans-serif;;
+  font-size: 14px;
+  background-color: #000;
+  color: #7c80b1;
+}
+.main
+{
+  width:500px;
+  margin:auto;
+  top:50%;
+  position:relative;
+  transform: translateY(-50%);
+}
+.logo
+{
+  font-size: 50px;
+  color:white;
+  font-weight: lighter;
+}
+.tagline
+{
+  font-size: 20px;
+  color:white;
+  font-weight: lighter;
+}
 .signin
 {
-  height: 50px;
-  width: 200px;
-  padding:20px;
+  color:white;
+  background-color:#4d90fe;
+  border:0;
+  padding:10px 20px;
+  border-radius:4px;
+  cursor:pointer;
+}
+.signin:hover
+{
+  background-color:white;
+  color:#4d90fe;
 }
