--- a/style.css
+++ b/style.css
@@ -9,13 +9,24 @@ html, body {
 
 body
 {
+
+  font-family: "Roboto",sans-serif;;
+  font-size: 14px;
+  color: #7c80b1;
+
+}
+.indexbody
+{
   background-image: url('images/bg.jpg');
   background-size: cover;
   background-repeat: no-repeat;
-  font-family: "Roboto",sans-serif;;
-  font-size: 14px;
-  background-color: #000;
-  color: #7c80b1;
+  background-position: top;
+}
+.parent
+{
+  height:inherit;
+  width:100%;
+  background: rgba(0, 0, 0, 0.6);
 }
 .main
 {
@@ -27,27 +38,40 @@ body
 }
 .logo
 {
-  font-size: 50px;
+  font-size: 48px;
   color:white;
-  font-weight: lighter;
+  font-weight:lighter;
+  color: #fff;
 }
 .tagline
 {
   font-size: 20px;
-  color:white;
+   color: rgba(255, 255, 255, 0.8);
   font-weight: lighter;
 }
 .signin
 {
-  color:white;
-  background-color:#4d90fe;
+  background: #4d5aff;
+  color: #fff;
   border:0;
   padding:10px 20px;
   border-radius:4px;
   cursor:pointer;
+  font-weight: bold;
 }
 .signin:hover
 {
-  background-color:white;
-  color:#4d90fe;
+background: #3945e2;
+}
+/*
+  Chat Page
+*/
+
+.members{
+  position:fixed;
+  top:0;
+  bottom:0;
+  left:0;
+  width:30%;
+  background-color: grey;
 }
