--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ background: #3945e2;
 .user-info
 {
   background:#2f4f4f;
-  padding:10px;
+  padding:15px;
   font-weight:bold;
 }
 .logout
@@ -139,7 +139,7 @@ background: #3945e2;
 .chat-info
 {
   background-color:#2f4f4f;
-  padding:10px;
+  padding:15px;
 color:white;
 font-weight: bold;
 letter-spacing: 1px;
@@ -152,11 +152,13 @@ letter-spacing: 1px;
 }
 .messages
 {
-  background: #faebd7;
+  background: azure;
   height: 100%;
   padding:10px;
   height:90%;
   overflow: auto;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
+
 }
 .message
 {
@@ -165,13 +167,16 @@ letter-spacing: 1px;
   margin-bottom:10px;
   border-radius: 8px;
   color:white;
-  width:50%;
+  clear:both;
+  max-width:60%;
+  float:left;
 }
 .message.sentmsg
 {
     background:darkgrey;
     color:white;
     margin-bottom: 10px;
+    float:right;
 }
 .chat-form
 {
