--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ letter-spacing: 1px;
   max-width:60%;
   float:left;
 }
-.message.sentmsg
+.message.by-user
 {
     background:darkgrey;
     color:white;
